--- a/01-docker/docker-sql/pipeline/insert_taxi_zones_lookup.ipynb
+++ b/01-docker/docker-sql/pipeline/insert_taxi_zones_lookup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c1d3d8b6-bf74-4ecc-8668-19c5b2133207",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "de06503a-2a9b-476b-a62f-be3f7764cbc8",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "265"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,11 +34,19 @@
     "\n",
     "df_zones.to_sql(name='zones', con=engine, if_exists='replace')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5938f14-62d1-4702-8e00-b1bfc1bf0844",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -52,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
